<resources>
    <string name="app_name">LaunchMyBoat</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password_optional">Password (optional)</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_incorrect_loginUser">One or more of the given details are wrong</string>
    <string name="title_activity_facebook_login">Sign in with facebook</string>
    <string name="facebook_app_id">1653990104901001</string>
    <string name="title_activity_instructions">InstructionsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_launch_aboat">LaunchABoat</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_zipCode">Zip Code</string>
    <string name="prompt_date">Pick a date</string>
    <string name="prompt_time">Pick the time</string>
    <string name="prompt_boat_name">Enter the boat\'s name</string>
    <string name="prompt_boat_weight">Enter the boat\'s weight</string>
    <string name="prompt_is_for_sale">Is for sale?</string>
    <string name="prompt_is_owner">Are you the owner?</string>
    <string name="error_field_only_numbers">Enter only numbers</string>
    <string name="title_activity_launch_boat">LaunchBoatActivity</string>
</resources>
